--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>비룡?그게 뭔데?</title>
+	<title>비룡</title>
 	<style type="text/css">
 		@font-face { font-family: 'TmonMonsori'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/TmonMonsori.woff') format('woff'); font-weight: normal; font-style: normal; }
 		body{background: black; margin: auto; margin: 0px; padding: 0px;}
